--- a/app/globals.css
+++ b/app/globals.css
@@ -42,7 +42,7 @@ body {
   }
 
   .primary-gradient {
-    background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
+    background: linear-gradient(129deg, #4646dc 0%, #3465ce 100%);
   }
 
   .dark-gradient {
