--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,7 +42,7 @@ body {
   }
 
   .primary-gradient {
-    background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
+    background: linear-gradient(129deg, #744ed6 0%, #3b3be2 100%);
   }
 
   .dark-gradient {
